adding model task

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <h1>
   {{title}}
 </h1>
+<p>
+  <strong>ID: </strong>{{task.id}} <br>
+  <strong>Título: </strong>{{task.title}}
+</p>
+<hr>
+<p>
+  <strong>ID: </strong>{{task2.id}} <br>
+  <strong>Título: </strong>{{task2.title}}
+</p>
