--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -9,9 +9,17 @@
       <td>{{task.id}}</td>
       <td>{{task.title}}</td>
       <td>
-        <button class="btn btn-info">Detalhes</button>
-        <button class="btn btn-danger">Excluir</button>
+        <button class="btn btn-info" data-toggle="modal" data-target="#taskDetailModal" (click)="onSelect(task)">
+          <span class="glyphicon glyphicon-info-sign"></span>
+          Detalhes
+        </button>
+        <button class="btn btn-danger">
+          <span class="glyphicon glyphicon-trash"></span>
+          Excluir
+        </button>
       </td>
     </tr>
   </tbody>
 </table>
+
+<task-detail [task]="selectedTask"></task-detail>
