--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -30,7 +30,7 @@
           <span class="glyphicon glyphicon-info-sign"></span>
           Detalhes
         </a>
-        <button class="btn btn-danger">
+        <button class="btn btn-danger" (click)="deleteTask(task)">
           <span class="glyphicon glyphicon-trash"></span>
           Excluir
         </button>
