--- a/src/app/navbar/task-search/task-search.component.html
+++ b/src/app/navbar/task-search/task-search.component.html
@@ -1,13 +1,9 @@
 <div style="position: relative">
   <div class="form-control">
-    <input class="form-control mr-sm-2" type="text" placeholder="Busca de tarefas" aria-label="Search">
+    <input #searchInput class="form-control mr-sm-2" type="text" (keyup)="search(searchInput.value)" placeholder="Busca de tarefas">
   </div>
 
-  <div class="list-group" style="position:absolute; width: 100%; left: 0; top: 45px; z-index: 1000">
-    <a href="#" class="list-group-item">Tarefa 1</a>
-    <a href="#" class="list-group-item">Tarefa 2</a>
-    <a href="#" class="list-group-item">Tarefa 3</a>
-    <a href="#" class="list-group-item">Tarefa 4</a>
-    <a href="#" class="list-group-item">Tarefa 5</a>
+  <div *ngIf="tasks" class="list-group" style="position:absolute; width: 100%; left: 0; top: 45px; z-index: 1000">
+    <a href="#" (click)="gotoTask(task)" *ngFor="let task of tasks" class="list-group-item" style="cursor: pointer">{{ task.title }}</a>
   </div>
 </div>
