--- a/src/app/navbar/task-search/task-search.component.html
+++ b/src/app/navbar/task-search/task-search.component.html
@@ -4,6 +4,6 @@
   </div>
 
   <div *ngIf="tasks" class="list-group" style="position:absolute; width: 100%; left: 0; top: 45px; z-index: 1000">
-    <a href="#" (click)="gotoTask(task)" *ngFor="let task of tasks" class="list-group-item" style="cursor: pointer">{{ task.title }}</a>
+    <a (click)="gotoTask(task)" *ngFor="let task of tasks" class="list-group-item" style="cursor: pointer">{{ task.title }}</a>
   </div>
 </div>
