--- a/src/app/tasks/task-detail/task-detail.component.html
+++ b/src/app/tasks/task-detail/task-detail.component.html
@@ -1,6 +1,6 @@
-<h1 class="page-header pt-5">Detalhes da Tarefa: {{ task?.title }}</h1>
+<h1 class="page-header pt-5">Detalhes da Tarefa: {{ task.title }}</h1>
 
-<form #taskForm="ngForm" *ngIf="task" class="mt-4" novalidate>
+<form #taskForm="ngForm" class="mt-4" novalidate>
   <div class="row">
     <div class="form-group col-md-6">
       <label for="title" class="col-form-label">Título</label>
