remove group form example

--- a/src/app/tasks/task-detail/task-detail.component.html
+++ b/src/app/tasks/task-detail/task-detail.component.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <div class="row" formGroupName="user">
+<!--   <div class="row" formGroupName="user">
     <div class="form-group col-md-6">
       <label for="name" class="col-form-label">Nome</label>
       <input type="text" formControlName="name" id="name" class="form-control">
@@ -37,7 +37,7 @@
       <label for="email" class="col-form-label">Email</label>
       <input type="text" formControlName="email" id="email" class="form-control">
     </div>
-  </div>
+  </div> -->
 
   <pre>
     {{ reactiveTaskForm.value | json }}
