--- a/src/app/tasks/task-detail/task-detail.component.html
+++ b/src/app/tasks/task-detail/task-detail.component.html
@@ -1,22 +1,29 @@
 <h1 class="page-header pt-5">Detalhes da Tarefa: {{ task.title }}</h1>
 
-<form [formGroup]="reactiveTaskForm">
+<form [formGroup]="reactiveTaskForm" class="mt-4" novalidate>
   <div class="row">
     <div class="form-group col-md-6">
       <label for="title" class="col-form-label">Título</label>
-      <input type="text" formControlName="title" id="title" class="form-control">
+      <input type="text" formControlName="title" id="title" class="form-control" [class.is-invalid]="reactiveTaskForm.get('title').invalid && reactiveTaskForm.get('title').touched" [class.is-valid]="reactiveTaskForm.get('title').valid">
+      <div class="invalid-feedback">
+        <div *ngIf="reactiveTaskForm.get('title').errors?.required">Título é obrigatório</div>
+        <div *ngIf="reactiveTaskForm.get('title').errors?.minlength">O título deve ter no mínimo 2 caracteres</div>
+        <div *ngIf="reactiveTaskForm.get('title').errors?.maxlength">O título deve ter no máximo 255 caracteres</div>
+      </div>
     </div>
 
     <div class="form-group col-md-3">
       <label for="deadline" class="col-form-label">Prazo de entrega</label>
-      <input type="text" formControlName="deadline" id="deadline" class="form-control">
+      <input type="text" formControlName="deadline" id="deadline" class="form-control" [class.is-invalid]="reactiveTaskForm.get('deadline').invalid && reactiveTaskForm.get('deadline').touched" [class.is-valid]="reactiveTaskForm.get('deadline').valid">
+      <div class="invalid-feedback">Prazo de entrega é obrigatório</div>
     </div>
 
     <div class="form-group col-md-3">
       <label for="done" class="col-form-label">Situação</label>
-      <select class="form-control" formControlName="done" id="done">
+      <select class="form-control" formControlName="done" id="done" [class.is-invalid]="reactiveTaskForm.get('done').invalid && reactiveTaskForm.get('done').touched" [class.is-valid]="reactiveTaskForm.get('done').valid">
         <option *ngFor="let option of taskDoneOptions" [value]="option.value">{{option.text}}</option>
       </select>
+      <div class="invalid-feedback">Situação não pode ficar em branco</div>
     </div>
   </div>
 
@@ -41,6 +48,10 @@
 
   <pre>
     {{ reactiveTaskForm.value | json }}
+  </pre>
+
+  <pre>
+      {{ reactiveTaskForm.get('title').errors | json}}
   </pre>
 </form>
 
