--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -2,32 +2,48 @@
 <hr>
 
 <div class="jumbotron">
-  <form class="form-horizontal" [formGroup]="userForm" (ngSubmit)="signUpUser()">
+  <form class="form-horizontal" [formGroup]="form" (ngSubmit)="signUpUser()" class="mt-4" novalidate>
     <div class="form-group row">
       <label for="name" class="col-sm-4 col-form-label">Nome</label>
       <div class="col-sm-4">
-        <input type="text" class="form-control" id="name" formControlName="name">
+        <input type="text" class="form-control" id="name" formControlName="name" [ngClass]="formUtils.fieldClassForErrorOrSuccess('name')">
+        <div class="invalid-feedback">
+          <div *ngIf="form.get('name').errors?.required">Nome é obrigatório</div>
+          <div *ngIf="form.get('name').errors?.minlength">O nome deve ter no mínimo 5 caracteres</div>
+          <div *ngIf="form.get('name').errors?.maxlength">O nome deve ter no máximo 100 caracteres</div>
+        </div>
       </div>
     </div>
   
     <div class="form-group row">
       <label for="email" class="col-sm-4 col-form-label">Email</label>
       <div class="col-sm-4">
-        <input type="email" class="form-control" id="email" formControlName="email">
+        <input type="email" class="form-control" id="email" formControlName="email" [ngClass]="formUtils.fieldClassForErrorOrSuccess('email')">
+        <div class="invalid-feedback">
+          <div *ngIf="form.get('email').errors?.required">Email é obrigatório</div>
+          <div *ngIf="form.get('email').errors?.email">O email é inválido</div>
+        </div>
       </div>
     </div>
 
     <div class="form-group row">
       <label for="password" class="col-sm-4 col-form-label">Senha</label>
       <div class="col-sm-4">
-        <input type="password" class="form-control" id="password" formControlName="password">
+        <input type="password" class="form-control" id="password" formControlName="password" [ngClass]="formUtils.fieldClassForErrorOrSuccess('password')">
+        <div class="invalid-feedback">
+          <div *ngIf="form.get('password').errors?.required">Senha é obrigatório</div>
+          <div *ngIf="form.get('password').errors?.minlength">A senha deve ter no mínimo 8 caracteres</div>
+        </div>
       </div>
     </div>
 
     <div class="form-group row">
       <label for="passwordConfirmation" class="col-sm-4 col-form-label">Confirmar Senha</label>
       <div class="col-sm-4">
-        <input type="password" class="form-control" id="passwordConfirmation" formControlName="passwordConfirmation">
+        <input type="password" class="form-control" id="passwordConfirmation" formControlName="passwordConfirmation" [ngClass]="formUtils.fieldClassForErrorOrSuccess('passwordConfirmation')">
+        <div class="invalid-feedback">
+            <div *ngIf="form.get('passwordConfirmation').errors?.required">Confirmação de senha é obrigatório</div>
+          </div>
       </div>
     </div>
 
