--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -2,6 +2,16 @@
 <hr>
 
 <div class="jumbotron">
+  <div *ngIf="formErrors" class="alert alert-danger">
+    <strong>
+      <span class="glyphicon glyphicon-warning-sign"></span>
+      Ocorreu um erro ao tentar criar a sua conta no sistema.
+    </strong>
+
+    <ul>
+      <li *ngFor="let error of formErrors">{{ error }}</li>
+    </ul>
+  </div>
   <form class="form-horizontal" [formGroup]="form" (ngSubmit)="signUpUser()" class="mt-4" novalidate>
     <div class="form-group row">
       <label for="name" class="col-sm-4 col-form-label">Nome</label>
@@ -50,7 +60,7 @@
 
     <div class="form-group row">
       <div class="col-sm-offset-4 col-sm-8">
-        <button [disabled]="form.invalid" type="submit" class="btn btn-primary">Criar Conta</button>
+        <button [disabled]="form.invalid || submitted" type="submit" class="btn btn-primary">Criar Conta</button>
       </div>
     </div>
   </form>
