--- a/src/app/navbar/task-search/task-search.component.html
+++ b/src/app/navbar/task-search/task-search.component.html
@@ -1,9 +1,7 @@
-<div style="position: relative">
-  <div class="form-control">
-    <input #searchInput class="form-control mr-sm-2" type="text" (keyup)="search(searchInput.value)" placeholder="Busca de tarefas">
-  </div>
-
-  <div *ngIf="tasks" class="list-group" style="position:absolute; width: 100%; left: 0; top: 45px; z-index: 1000">
+<div>
+  <input #searchInput class="form-control" type="text" (keyup)="search(searchInput.value)" placeholder="Busca de tarefas">
+  
+  <div *ngIf="tasks" class="list-group">
     <a (click)="gotoTask(task)" *ngFor="let task of tasks" class="list-group-item" style="cursor: pointer">{{ task.title }}</a>
   </div>
 </div>
