--- a/src/app/sign-in-form/sign-in-form.component.html
+++ b/src/app/sign-in-form/sign-in-form.component.html
@@ -35,9 +35,16 @@
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="form-group">
       <div class="col-sm-offset-4 col-sm-8">
         <button [disabled]="form.invalid || submitted" type="submit" class="btn btn-primary">Logar</button>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-4 col-sm-8">
+        Se você não possui uma conta, 
+        <a routerLink="/sign-up">clique aqui</a>
       </div>
     </div>
   </form>
